# parallel_computing_project

./: CMakeLists.txt  README.md  eq_dataset.sh  generate.sh  main.c  start.sh
res/: slurm-52564.out  slurm-52565.out  slurm-52566.out  slurm-52567.out  slurm-52568.out  slurm-52569.out
resources/: dataset_1.txt  dataset_2.txt  dataset_3.txt
resources/1/: 1.txt  2.txt  3.txt  4.txt  5.txt
resources/2/: 1.txt  2.txt  3.txt  4.txt  5.txt
resources/3/: 1.txt  2.txt  3.txt  4.txt  5.txt
resources/4/: 1.txt  2.txt  3.txt  4.txt  5.txt
resources/5/: 1.txt  2.txt  3.txt  4.txt  5.txt
resources/6/: 1.txt  2.txt  3.txt  4.txt  5.txt
resources/7/: 1.txt  2.txt  3.txt  4.txt  5.txt
